--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,16 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/server.js"
+      "dest": "/server.js"
     }
-  ],
+  ]
+,
   "env": {
     "NODE_ENV": "production"
   }
