--- a/api/vercel.json
+++ b/api/vercel.json
@@ -9,10 +9,9 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "server.js"
     }
-  ]
-,
+  ],
   "env": {
     "NODE_ENV": "production"
   }
